--- a/Library.Infrastructure/Library.Infrastructure.csproj
+++ b/Library.Infrastructure/Library.Infrastructure.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Library.Core\Library.Core.csproj" />
+    </ItemGroup>
+
 </Project>
